--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,53 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.wrapper {
+  position: relative;
+  white-space: nowrap;
+}
+.wrapper p {
+  position: absolute;
+  background-color: #ebe3e3;
+  color: black;
+  font-weight: 600;
+  border-radius: 10px;
+  padding: 5px 20px;
+  top: -50px;
+  left: 0;
+}
+
+.top-card {
+  border: 1px solid gray;
+  border-radius: 10px;
+  cursor: pointer;
+  padding: 0 !important;
+  width: 150px;
+}
+
+.top-card label {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  gap: 6px;
+  cursor: pointer;
+}
+
+.top-card:has(input:checked) {
+  box-shadow: 0 0 15px #fff;
+  border: 1px solid white;
+}
+.top-card input {
+  display: none;
 }
